refactor: 유저 생성/수정 로직 개선